--- a/index.html
+++ b/index.html
@@ -74,8 +74,7 @@
           progressBarFull.style.width = 100 * progress + "%";
         }).then((unityInstance) => {
           loadingBar.style.display = "none";
-          unityInstance.SetFullscreen(1);
-          fullscreenButton.onclick = () => {
+          fullscreenButton.onload = () => {
             unityInstance.SetFullscreen(1);
           };
         }).catch((message) => {
